# django-strawberry

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.claude/: settings.json
django_strawberry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: advanced.md  conf.py  crudview.md  edit_drawer_plan.md  index.md  index.rst  installation.md  quickstart.md  tables.md
example_project/: db.sqlite3
example_project/example_project/: settings.py  urls.py
example_project/sampleapp/: admin.py  models.py  tables.py  urls.py  views.py
example_project/sampleapp/management/commands/: generate_samples.py
example_project/sampleapp/migrations/: 0001_initial.py  0002_country_samplemodel.py
example_project/templates/neapolitan/: base.html  object_confirm_delete.html  object_detail.html  object_form.html  object_list.html
example_project/templates/neapolitan/partial/: object_actions.html
strawberry/: __init__.py  apps.py  conf.py  forms_mixins.py  tables.py  views.py
strawberry.egg-info/: PKG-INFO  SOURCES.txt
strawberry/templates/strawberry/: base_minimal.html  base_strawberry.html  base_strawberry_daisyui.html  object_form.html  object_list.html  object_list_top_title.html  tables2.html  tables2_daisyui.html  tables2_flowbite.html
strawberry/templates/strawberry/daisyui/: object_confirm_delete.html  object_detail.html  object_form.html  object_list.html  tables2.html
strawberry/templates/strawberry/default/: object_form.html  tables2.html
strawberry/templatetags/: strawberry.py
(+29 files in other folders)
