[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-strawberry"
version = "0.1.13"
description = "Reusable Django CRUD app with extra features, based on Neapolitan and integrating django-tables2"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alberto Rodriguez" }]
dependencies = [
    "django>=5.0",
    "neapolitan>=0.0",
    "django-tables2>=2.5",
    "django-filter>=24.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["strawberry*"]

[tool.setuptools.package-data]
"strawberry" = ["templates/**/*.html", "static/**/*"]